@@ -54,11 +54,6 @@ let dom_wrt Q (t : ty) =
     in
         Computation.B.set { for α, t : ty in Q do if Set.contains α αs then yield! t.fv }
 
-// match System-F quantifiers
-let (|T_Foralls_F|_|) = function
-    | T_Foralls (Q, t) when List.forall (function _, T_Bottom _ -> true | _ -> false) Q -> Some (List.map fst Q, t)
-    | _ -> None
-
 
 [< RequireQualifiedAccess >]
 module internal Mgu =
@@ -67,13 +62,11 @@ module internal Mgu =
         type var with
             member α.skolemized = sprintf Config.Typing.skolemized_tyvar_fmt α.pretty
 
-        let skolemized = function
-            | T_Foralls ([], t) -> [], t
-            | T_Foralls (Q, t) ->
-                let sks = [ for α, t in Q do yield α, α.skolemized, t.kind ]
-                let θ = new tsubst (Env.t.ofSeq <| List.map (fun (α, x, k) -> α, T_Cons (x, k)) sks), ksubst.empty
-                in
-                    List.map (fun (_, x, _) -> x) sks, subst_ty θ t
+        let skolemized αks t =
+            let sks = [ for α : var, k in αks do yield α, α.skolemized, k ]
+            let θ = new tsubst (Env.t.ofSeq <| List.map (fun (α, x, k) -> α, T_Cons (x, k)) sks), ksubst.empty
+            in
+                List.map (fun (_, x, _) -> x) sks, subst_ty θ t
 
         type ty with
             member this.cons =
@@ -102,36 +95,29 @@ module internal Mgu =
                 if Set.contains c cons then Report.Error.skolemized_type_variable_escaped ctx.loc c
 
 
-        let rec subsume ctx (Q : prefix) (t1 : ty) (t2 : ty) =
-            assert (t1.is_nf && t2.is_nf)
-            match t1, t2 with
-            | T_Foralls_F (αs, t1), T_ForallsQ (Q2, t2) ->
-                assert (Q.dom <> Q2.dom)
-                let skcs, t1' = skolemized t1
-                let Q1, (tθ1, kθ1) = mgu ctx (Q.append Q2) t1' t2
-                let Q2, Q3 = Q1.split Q.dom
-                let θ2 = tθ1.remove Q3.dom, kθ1
-                // for each skolemized variable check it does not escape
-                for c in skcs do
-                    check_skolem_escape ctx c θ2 Q2
-                Q2, θ2
-
-            | _ -> Q, (tsubst.empty, ksubst.empty)
+        let rec subsume ctx (Q : prefix) (T_Foralls_F (αs, t1) as t1_) (T_ForallsQ (Q2, t2) as t2_) =
+            assert (t1_.is_nf && t2_.is_nf)
+            assert (Q.is_disjoint Q2)
+            L.mgu "[sub] %O :> %O\n      Q = %O\n" t1_ t2_ Q
+            let skcs, t1' = skolemized αs t1
+            let Q1, (tθ1, kθ1) = mgu ctx (Q.append Q2) t1' t2
+            let Q2, Q3 = Q1.split Q.dom
+            let θ2 = tθ1.remove Q3.dom, kθ1
+            // for each skolemized variable check it does not escape
+            for c in skcs do
+                check_skolem_escape ctx c θ2 Q2
+            Q2, θ2
 
 
         and mgu_scheme ctx (Q : prefix) (t1_ : ty)  (t2_ : ty) =
             assert (t1_.is_nf && t2_.is_nf)
+            L.mgu "[mgu-σ] %O == %O\n        Q = %O" t1_ t2_ Q
             match t1_, t2_ with
             | (T_Bottom _, (_ as t))
             | (_ as t, T_Bottom _) -> Q, (tsubst.empty, ksubst.empty), t
 
             | T_ForallsQ (Q1, t1), T_ForallsQ (Q2, t2) ->
-                assert (let p a b = Set.intersect a b = Set.empty
-                        let d = Q.dom
-                        let d1 = Q1.dom
-                        let d2 = Q2.dom
-                        in
-                            p d d1 && p d1 d2 && p d d2)
+                assert (let p (a : prefix) b = a.is_disjoint b in p Q Q1 && p Q1 Q2 && p Q Q2)
                 let Q3, θ3 = mgu ctx (Q.append(Q1).append(Q2)) t1 t2
                 let Q4, Q5 = Q3.split Q.dom
                 in
@@ -146,6 +132,7 @@ module internal Mgu =
             let t2_ = t2_.nf
             let rec R (Q0 : prefix) (t1 : ty) (t2 : ty) =
                 assert (t1.is_nf && t2.is_nf)
+                L.mgu "[mgu] %O == %O\n      Q = %O" t1 t2 Q
                 match t1, t2 with
                 | T_Cons (x, k1), T_Cons (y, k2) when x = y -> Q0, (tsubst.empty, kmgu ctx k1 k2)
                 | T_Var (α, k1), T_Var (β, k2) when α = β   -> Q0, (tsubst.empty, kmgu ctx k1 k2)
@@ -159,7 +146,7 @@ module internal Mgu =
                     in
                         Q3, θ3 ** θ2 ** θ1
 
-                | T_Forall ((α1, T_Bottom k1), t1), T_Forall ((α2, T_Bottom k2), t2) ->
+                | T_Forall_F ((α1, k1), t1), T_Forall_F ((α2, k2), t2) ->
                     let c1 = α1.skolemized
                     let c2 = α2.skolemized
                     let Q1, θ1 =
@@ -172,7 +159,7 @@ module internal Mgu =
                     check_skolem_escape ctx c2 θ1 Q1
                     Q1, θ1
 
-                | T_Var (α1, k1), T_NamedVar (α2, k2) // prefer named tyvars over anonymous tyvars when unifying tyvar against tyvar
+                | T_Var (α1, k1), T_NamedVar (α2, k2) // prefer named over anonymous when unifying var vs. var
                 | T_NamedVar (α2, k2), T_Var (α1, k1)
                 | T_Var (α1, k1), T_Var (α2, k2) ->
                     let α1t = Q0.lookup α1
@@ -187,8 +174,9 @@ module internal Mgu =
                     in
                         Q3, θ3 ** θ2 ** θ1
 
-                | T_Var (α, k), t
+                | T_Var (α, k), t       // TODO: HML spec says that t should be an ftype: add an assert OR define an active pattern Ty_F which tranforms a ty into an System-F type
                 | t, T_Var (α, k) ->
+                    assert t.is_ftype
                     let αt =
                         match Q0.search α with
                         | Some t -> t
@@ -210,7 +198,12 @@ module internal Mgu =
                 | t1, t2 ->
                     raise (Mismatch (t1, t2))
 
-            try R Q t1_ t2_
+            try
+                let Q, (tθ, _ as θ) = R Q t1_ t2_
+                // check post-condition over HML unify function result
+                for _, t in tθ do
+                    assert t.nf.is_ftype
+                Q, θ
             with Mismatch (t1, t2) -> Report.Error.type_mismatch loc t1_ t2_ t1 t2
 
 
@@ -226,9 +219,9 @@ type basic_builder with
             let! { tθ = tθ; kθ = kθ; γ = γ } = M.get_state
             let θ = tθ, kθ
             let! Q = M.get_Q
-            L.mgu "[U] %O == %O" t1 t2
+            L.mgu "[U] %O =?= %O\n    Q = %O" t1 t2 Q
             let Q, (tθ, kθ as θ) = mgu { loc = loc; γ = γ } Q (subst_ty θ t1) (subst_ty θ t2)
-            L.mgu "[S] [%O] --- [%O]\n    Q = %O" tθ kθ Q
+            L.mgu "[S] [%O] --- [%O]\n    Q' = %O" tθ kθ Q
             do! M.set_Q Q
             do! M.update_subst θ
         }
